--- a/BlackJack/BlackJack.csproj
+++ b/BlackJack/BlackJack.csproj
@@ -60,13 +60,14 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -80,6 +81,165 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\2 de corazones.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\2 de diamantes.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\2 de picas.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\2 de treboles.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\3 de corazones.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\3 de diamantes.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\3 de picas.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\3 de treboles.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\4 de corazones.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\4 de diamantes.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\4 de picas.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\4 de treboles.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\5 de corazones.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\5 de diamantes.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\5 de picas.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\5 de treboles.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\6 de corazones.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\6 de diamantes.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\6 de picas.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\6 de treboles.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\7 de corazones.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\7 de diamantes.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\7 de picas.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\7 de treboles.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\8 de corazones.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\8 de diamantes.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\8 de picas.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\8 de treboles.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\9 de corazones.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\9 de diamantes.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\9 de picas.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\9 de treboles.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\10 de corazones.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\10 de diamantes.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\10 de picas.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\10 de treboles.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ace_of_spades.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ace_of_spades2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\As de corazones.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\As de diamantes.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\As de treboles.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Jack de corazones.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Jack de diamantes.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Jack de picas.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Jack de treboles.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Reina de corazones.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Reina de diamantes.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Reina de picas.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Reina de treboles.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Rey de corazones.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Rey de diamantes.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Rey de picas.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Rey de treboles.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
