--- a/Cliente-Servidor/Cliente-Servidor.csproj
+++ b/Cliente-Servidor/Cliente-Servidor.csproj
@@ -46,12 +46,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Carta.cs" />
-    <Compile Include="Cliente.cs" />
+    <Compile Include="Enviar.cs" />
     <Compile Include="Mazo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Respuesta.cs" />
-    <Compile Include="Servidor.cs" />
+    <Compile Include="Escuchar.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
