--- a/BJ_Cliente/BJ_Jugador.csproj
+++ b/BJ_Cliente/BJ_Jugador.csproj
@@ -260,5 +260,8 @@
   <ItemGroup>
     <None Include="Resources\Rey de treboles.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Esperando.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
