--- a/BJ_Cliente/BJ_Jugador.csproj
+++ b/BJ_Cliente/BJ_Jugador.csproj
@@ -263,5 +263,8 @@
   <ItemGroup>
     <None Include="Resources\Esperando.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Tablero.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
