Actualizados los turnos

--- a/BJ_Cliente/BJ_Jugador.csproj
+++ b/BJ_Cliente/BJ_Jugador.csproj
@@ -266,5 +266,8 @@
   <ItemGroup>
     <None Include="Resources\Tablero.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Tablero_desactivado.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
