--- a/BlackJack/BJ_Server.csproj
+++ b/BlackJack/BJ_Server.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Serializador.cs" />
     <Compile Include="TableroServidor.cs">
       <SubType>Form</SubType>
     </Compile>
