Actualizada la interfaz del ranking, ranking y login ya no son ventanas fijas

--- a/BJ_Cliente/BJ_Jugador.csproj
+++ b/BJ_Cliente/BJ_Jugador.csproj
@@ -300,5 +300,8 @@
   <ItemGroup>
     <None Include="Resources\As de picas.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Ranking.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
