--- a/BJ_Cliente/BJ_Jugador.csproj
+++ b/BJ_Cliente/BJ_Jugador.csproj
@@ -70,6 +70,12 @@
       <DependentUpon>Ranking.cs</DependentUpon>
     </Compile>
     <Compile Include="Juego.cs" />
+    <Compile Include="Resultados.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Resultados.Designer.cs">
+      <DependentUpon>Resultados.cs</DependentUpon>
+    </Compile>
     <Compile Include="TableroJugador.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -86,6 +92,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Ranking.resx">
       <DependentUpon>Ranking.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resultados.resx">
+      <DependentUpon>Resultados.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="TableroJugador.resx">
       <DependentUpon>TableroJugador.cs</DependentUpon>
@@ -302,6 +311,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Ranking.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Resultados.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
